# Magic

./: CMakeLists.txt  README.md
RenderSystems/: CMakeLists.txt
RenderSystems/GL/: CMakeLists.txt
RenderSystems/GL/include/: GLRenderSystem.h  GLwindow.h
RenderSystems/GL/src/: GLRenderSystem.cpp  GLwindow.cpp
main/: CMakeLists.txt
main/include/: Magic.h  RenderSystem.h  RenderWindow.h  Texture.h  TextureManager.h  Window.h
main/src/: Magic.cpp  RenderSystem.cpp  RenderWindow.cpp  Texture.cpp  TextureManager.cpp  Window.cpp
tests/: CMakeLists.txt  GLFWWindow.cpp  GLFWWindow.h  main.cpp
